Image slot z-index issue fixed

--- a/app/bundles/CoreBundle/Assets/css/libraries/builder.less
+++ b/app/bundles/CoreBundle/Assets/css/libraries/builder.less
@@ -94,6 +94,10 @@ div[data-slot] {
     position: relative;
 }
 
+div[data-slot="image"] img {
+    z-index: 1;
+}
+
 .slot-placeholder {
     border-top: 1px solid #4e5e9e;
     margin-top: -1px;
